Add third round hash tests.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,11 +14,12 @@ add_library(4th_compute_dist_lib STATIC src/4th_round/fourthround.cpp)
 add_library(3rd_compute_dist_lib STATIC src/3rd_round/thirdround.cpp)
 
 add_executable(fourth_round_tests tests/FourthRoundTests.cpp)
+add_executable(third_round_tests tests/ThirdRoundTests.cpp)
 target_link_libraries(fourth_round_tests PUBLIC
     gtest_main
     4th_compute_dist_lib
 )
-target_link_libraries(fourth_round_tests PUBLIC
+target_link_libraries(third_round_tests PUBLIC
     gtest_main
     3rd_compute_dist_lib
 )
@@ -26,6 +27,10 @@ target_link_libraries(fourth_round_tests PUBLIC
 add_test(
     NAME fourth_round_tests
     COMMAND fourth_round_tests
+)
+add_test(
+    NAME third_round_tests
+    COMMAND third_round_tests
 )
 
 include_directories(src)
