Refactor 2nd round.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,8 +37,8 @@ include_directories(src)
 file(GLOB SOURCES src/*.h src/*.cpp)
 add_executable(4th_compute_dist src/4th_round/main.cpp src/4th_round/fourthround.cpp)
 add_executable(3rd_compute_dist src/3rd_round/main.cpp src/3rd_round/thirdround.cpp)
-add_executable(2nd_compute_dist src/2nd_round/main.cpp)
-add_executable(1st_compute_dist src/2nd_round/main.cpp)
+add_executable(2nd_compute_dist src/2nd_round/main.cpp src/2nd_round/secondround.cpp)
+add_executable(1st_compute_dist src/1st_round/main.cpp)
 target_compile_features(4th_compute_dist PRIVATE cxx_lambda_init_captures)
 target_compile_features(3rd_compute_dist PRIVATE cxx_lambda_init_captures)
 target_compile_features(2nd_compute_dist PRIVATE cxx_lambda_init_captures)
